<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Pick Your Preferences!</string>
    <string name="nav_header_subtitle">Select based on your specific tastes, or what you\'re in the mood for</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="without_login"><u>or continue without login</u></string>
    <string name="snacks_button_text">snacks</string>
    <string name="coffee_button_text">coffee</string>
    <string name="on_my_way_button_text">on my way</string>
    <string name="near_me_button_text">near me</string>
    <string name="forgot_password_text"><u>forgot password?</u></string>
    <string name="app_name1">I\'m Hungry!</string>

</resources>