<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <ImageButton
        android:id="@+id/near_me_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/near_me"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/coffee_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/coffee"
        app:layout_constraintBottom_toTopOf="@+id/snacks_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline3" />

    <ImageButton
        android:id="@+id/snacks_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/snacks"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coffee_button" />

    <TextView
        android:id="@+id/near_me_button_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/near_me_button_text"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textIsSelectable="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/near_me_button"
        app:layout_constraintEnd_toEndOf="@+id/near_me_button"
        app:layout_constraintStart_toStartOf="@+id/near_me_button"
        app:layout_constraintTop_toTopOf="@+id/near_me_button" />

    <TextView
        android:id="@+id/coffee_button_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/coffee_button_text"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textIsSelectable="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/coffee_button"
        app:layout_constraintEnd_toEndOf="@+id/coffee_button"
        app:layout_constraintStart_toStartOf="@+id/coffee_button"
        app:layout_constraintTop_toTopOf="@+id/coffee_button" />

    <TextView
        android:id="@+id/snacks_button_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/snacks_button_text"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textIsSelectable="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/snacks_button"
        app:layout_constraintEnd_toEndOf="@+id/snacks_button"
        app:layout_constraintStart_toStartOf="@+id/snacks_button"
        app:layout_constraintTop_toTopOf="@+id/snacks_button" />

</androidx.constraintlayout.widget.ConstraintLayout>